--- a/help/C/menulibre-quickstart.page
+++ b/help/C/menulibre-quickstart.page
@@ -4,6 +4,7 @@
 
 <info>
   <link type="guide" xref="index#contents"/>
+  <link type="seealso" xref="menulibre-find-installed"/>
   <credit type="author">
     <name>Sean Davis</name>
     <email>smd.seandavis@gmail.com</email>
