--- a/help/C/menulibre-find-installed.page
+++ b/help/C/menulibre-find-installed.page
@@ -9,7 +9,7 @@
     <email>smd.seandavis@gmail.com</email>
     <years>2012</years>
   </credit>
-  <desc>Finding an installed application</desc>
+  <desc>How to find an application</desc>
 </info>
 
 <title>Finding an installed application</title>
