--- a/data/ui/MenulibreWindow.ui
+++ b/data/ui/MenulibreWindow.ui
@@ -683,8 +683,8 @@
                         <property name="can_focus">False</property>
                         <property name="use_underline">True</property>
                         <property name="use_stock">True</property>
-                        <accelerator key="w" signal="activate" modifiers="GDK_CONTROL_MASK"/>
                         <accelerator key="q" signal="activate" modifiers="GDK_CONTROL_MASK"/>
+                        <accelerator key="w" signal="activate" modifiers="GDK_CONTROL_MASK"/>
                       </object>
                     </child>
                   </object>
@@ -1203,6 +1203,7 @@
                 <property name="can_focus">True</property>
                 <property name="margin_left">6</property>
                 <property name="margin_right">6</property>
+                <property name="margin_bottom">6</property>
                 <signal name="switch-page" handler="on_appsettings_notebook_switch_page" swapped="no"/>
                 <child>
                   <object class="GtkBox" id="appsettings_general">
@@ -1781,11 +1782,35 @@
                       </packing>
                     </child>
                     <child>
-                      <object class="GtkLabel" id="general_filename_label">
+                      <object class="GtkBox" id="box18">
+                        <property name="visible">True</property>
                         <property name="can_focus">False</property>
-                        <property name="xalign">1</property>
-                        <property name="label" translatable="yes">&lt;small&gt;Filename&lt;/small&gt;</property>
-                        <property name="use_markup">True</property>
+                        <child>
+                          <object class="GtkLabel" id="general_id_label">
+                            <property name="can_focus">False</property>
+                            <property name="label" translatable="yes">label</property>
+                          </object>
+                          <packing>
+                            <property name="expand">False</property>
+                            <property name="fill">True</property>
+                            <property name="position">0</property>
+                          </packing>
+                        </child>
+                        <child>
+                          <object class="GtkLabel" id="general_filename_label">
+                            <property name="visible">True</property>
+                            <property name="can_focus">False</property>
+                            <property name="xalign">1</property>
+                            <property name="label" translatable="yes">&lt;small&gt;Filename&lt;/small&gt;</property>
+                            <property name="use_markup">True</property>
+                          </object>
+                          <packing>
+                            <property name="expand">False</property>
+                            <property name="fill">True</property>
+                            <property name="pack_type">end</property>
+                            <property name="position">1</property>
+                          </packing>
+                        </child>
                       </object>
                       <packing>
                         <property name="expand">False</property>
@@ -1795,10 +1820,11 @@
                       </packing>
                     </child>
                     <child>
-                      <object class="GtkExpander" id="categories_expander">
+                      <object class="GtkFrame" id="frame5">
                         <property name="visible">True</property>
-                        <property name="can_focus">True</property>
-                        <property name="use_markup">True</property>
+                        <property name="can_focus">False</property>
+                        <property name="label_xalign">0</property>
+                        <property name="shadow_type">none</property>
                         <child>
                           <object class="GtkAlignment" id="alignment5">
                             <property name="visible">True</property>
@@ -2026,7 +2052,7 @@
                           </object>
                         </child>
                         <child type="label">
-                          <object class="GtkLabel" id="label3">
+                          <object class="GtkLabel" id="label2">
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
                             <property name="label" translatable="yes">&lt;b&gt;Categories&lt;/b&gt;</property>
