--- a/data/ui/MenulibreWindow.ui
+++ b/data/ui/MenulibreWindow.ui
@@ -635,7 +635,7 @@
                         <property name="use_stock">True</property>
                         <accelerator key="w" signal="activate" modifiers="GDK_CONTROL_MASK"/>
                         <accelerator key="q" signal="activate" modifiers="GDK_CONTROL_MASK"/>
-                        <signal name="activate" handler="on_file_quit_activate" swapped="no"/>
+                        <signal name="activate" handler="on_mnu_close_activate" swapped="no"/>
                       </object>
                     </child>
                   </object>
