--- a/data/ui/AboutMenulibreDialog.ui
+++ b/data/ui/AboutMenulibreDialog.ui
@@ -5,7 +5,7 @@
     <property name="can_focus">False</property>
     <property name="border_width">5</property>
     <property name="window_position">center</property>
-    <property name="icon">../media/menulibre.svg</property>
+    <property name="icon_name">menu-editor</property>
     <property name="type_hint">normal</property>
     <property name="program_name">MenuLibre</property>
     <property name="version">12.11.1</property>
