Reordered help shortcut keys.

--- a/help/C/menulibre-shortcut-keys.page
+++ b/help/C/menulibre-shortcut-keys.page
@@ -34,7 +34,7 @@
             <td><p>Cycle breadcrumbs forward</p></td>  <td><p><keyseq><key>Ctrl</key><key>Tab</key></keyseq></p></td>
         </tr>
         <tr>
-            <td><p>Cycle breadcrumbs backwards</p></td>  <td><p><keyseq><key>Ctrl</key><key>Shift</key><key>Tab</key></keyseq></p></td>
+            <td><p>Cycle breadcrumbs backwards</p></td>  <td><p><keyseq><key>Shift</key><key>Ctrl</key><key>Tab</key></keyseq></p></td>
         </tr>
         <tr>
             <td><p>Get help with <app>MenuLibre</app></p></td>  <td><p><keyseq><key>F1</key></keyseq></p></td>
@@ -63,7 +63,7 @@
             <td><p>Undo last change</p></td>  <td><p><keyseq><key>Ctrl</key><key>Z</key></keyseq></p></td>
         </tr>
         <tr>
-            <td><p>Redo last undone change</p></td>  <td><p><keyseq><key>Ctrl</key><key>Shift</key><key>Z</key></keyseq></p></td>
+            <td><p>Redo last undone change</p></td>  <td><p><keyseq><key>Shift</key><key>Ctrl</key><key>Z</key></keyseq></p></td>
         </tr>
     </tbody>
 </table>
