--- a/data/ui/AboutMenulibreDialog.ui
+++ b/data/ui/AboutMenulibreDialog.ui
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <interface>
   <!-- interface-requires gtk+ 3.0 -->
   <!-- interface-requires about_menulibre_dialog 1.0 -->
@@ -9,21 +8,21 @@
     <property name="icon_name">menu-editor</property>
     <property name="type_hint">normal</property>
     <property name="program_name">MenuLibre</property>
-    <property name="version">13.03.1</property>
+    <property name="version">13.03.2</property>
     <property name="copyright" translatable="yes">Copyright (C) 2012-2013 Sean Davis &lt;smd.seandavis@gmail.com&gt;</property>
     <property name="website">https://launchpad.net/menulibre</property>
-    <property name="license" translatable="yes">Copyright (C) 2012-2013 Sean Davis &lt;smd.seandavis@gmail.com&gt;
-This program is free software: you can redistribute it and/or modify it 
-under the terms of the GNU General Public License version 3, as published 
-by the Free Software Foundation.
-
-This program is distributed in the hope that it will be useful, but 
-WITHOUT ANY WARRANTY; without even the implied warranties of 
-MERCHANTABILITY, SATISFACTORY QUALITY, or FITNESS FOR A PARTICULAR 
-PURPOSE.  See the GNU General Public License for more details.
-
-You should have received a copy of the GNU General Public License along 
-with this program.  If not, see &lt;http://www.gnu.org/licenses/&gt;.
+    <property name="license" translatable="yes"># Copyright (C) 2012-2013 Sean Davis &lt;smd.seandavis@gmail.com&gt;
+# This program is free software: you can redistribute it and/or modify it 
+# under the terms of the GNU General Public License version 3, as published 
+# by the Free Software Foundation.
+# 
+# This program is distributed in the hope that it will be useful, but 
+# WITHOUT ANY WARRANTY; without even the implied warranties of 
+# MERCHANTABILITY, SATISFACTORY QUALITY, or FITNESS FOR A PARTICULAR 
+# PURPOSE.  See the GNU General Public License for more details.
+# 
+# You should have received a copy of the GNU General Public License along 
+# with this program.  If not, see &lt;http://www.gnu.org/licenses/&gt;.
 </property>
     <property name="authors">Copyright (C) 2012-2013 Sean Davis &lt;smd.seandavis@gmail.com&gt;</property>
     <property name="logo_icon_name">menu-editor</property>
